# astrometry.net-lite

./: CMakeLists.txt  README.md
.github/workflows/: build.yaml
cmake/: dependencies.cmake
cmake/patches/: cfitsio.patch  zlib.patch
example/: CMakeLists.txt  main.cpp
include/astrometry/: an-endian.h  codekd.h  fit-wcs.h  fits_io.h  index.h  ioutils.h  kdtree.h  kdtree_fits_io.h  keywords.h  log.h  os-features.h  quad-utils.h  quadfile.h  simplexy.h  sip-utils.h  starkd.h  tic.h
src/: CMakeLists.txt
src/libkd/: kdtree_fits_io.c  kdtree_internal.c  kdtree_internal_fits.c
src/solver/: quad-utils.c  solver.c  tweak2.c  verify.c
src/util/: bl.c  codekd.c  fit-wcs.cpp  fits_io.c  image2xy.c  index.c  ioutils.c  log.c  matchobj.c  permutedsort.c  qsort_reentrant.c  quadfile.c  simplexy.c  sip-utils.cpp  starkd.c  starutil.c  tic.c
